--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:theme="@style/Theme.Lab3_Moviles.NoActionBar"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
