--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
 
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +19,7 @@
         android:theme="@style/Theme.Lab3_Moviles">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="apikey"/>
+            android:value="API_KEY"/>
 
     <activity
         android:name=".MenuActivity"
